<resources>
    <string name="app_name">Uryde</string>
    <string name="login">Login</string>
    <string name="email_phone">Email/Mobile No</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_mobile_number_text">Please enter Email</string>
    <string name="forgot_password_with_question">Forgot Password?</string>
    <string name="condition">By registering, you agree to the terms and conditions</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_blank">Email field can\'t be left blank.</string>
    <string name="email_mobile_blank">Email/Mobile No field can\'t be left blank.</string>
    <string name="password_blank">Password field can\'t be left blank.</string>
    <string name="valid_email">Please enter valid email address</string>
    <string name="confirm_valid_password">Enter confirm password</string>
    <string name="valid_password_lenght">Password must be 8 character long</string>
    <string name="first_name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="valid_name">Name field can\'t be left blank.</string>
    <string name="valid_mobile">Mobile number field can\'t be left blank.</string>
    <string name="valid_mobile_lenght">Mobile number must contain at least 10 digit.</string>
    <string name="password_not_match">Password and confirm password doesn\'t matched.</string>
    <string name="aggree_terms">Please select the terms and conditions</string>
    <string name="select_photo_from">Select Photo From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="signing_up">Signing Up…</string>
    <string name="message">Message</string>
    <string name="loading">Loading…</string>
    <string name="attention">Attention</string>
    <string name="something_wrong">There is a problem with our system. We apologize for the inconvenience caused. Please try again later. If the problem persist, please contact at staff@uryde.com.</string>
    <string name="internet_toast">Please Check your internet connectivity</string>
    <string name="no_internet">No Internet</string>
    <string name="please_wait">Please wait…</string>
    <string name="signing_in">Signing in…</string>
    <string name="terms_contions">Terms And Conditions</string>
    <string name="please_type_your_email_address_and_we_ll_send_you_a_code_to_reset_your_password">Please type your email address and we will send you a code to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="otp_sent">Email Sent!</string>
    <string name="we_just_sent_you_a_code_via_email_please_enter_it_below_to_choose_a_new_password">We just sent you a code via email, please enter it below to choose new password.</string>
    <string name="did_not_receive_the_otp_in_your_cell_phone_click_here_to_resubmit">Did not receive the code via email?\nClick here to resend.</string>
    <string name="verify">Verify</string>
    <string name="enter_code">Enter Code</string>
    <string name="choose_new_password">Choose your new password</string>
    <string name="confirm__new_password">Confirm new password</string>
    <string name="new_password">New Password</string>
    <string name="valid_otp">Please enter a valid OTP</string>
    <string name="blank_otp">OTP field can\'t be left blank.</string>
    <string name="new_passwod_blank">New password field can\'t be left blank.</string>
    <string name="new_password_lenght">New password must contains at least 8 characters.</string>
    <string name="email_not_found_text_view">The email address specified was not found in our system. Please make sure to use the email address that was used during registration.</string>
    <string name="email_not_found_text">Email address not found</string>
    <string name="ok">OK</string>
    <string name="edit">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="payment">Payment</string>
    <string name="setting">Settings</string>
    <string name="about_us">About us</string>
    <string name="book_ride">New trip</string>
    <string name="sign_out">Signing out…</string>
    <string name="home">Ask or book a taxi</string>
    <string name="come_soon">Under Development</string>
    <string name="reset_password">Reset Password</string>
    <string name="ride_history">Travel History</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="book_now">Travel Now</string>
    <string name="book_later">Traveling Later</string>
    <string name="select_drop_off_location">Please select drop off location</string>
    <string name="no_driver_found">No driver available</string>
    <string name="set_pickup_location">Select pickup point</string>
    <string name="pickup_location">Pickup location</string>
    <string name="drop_off">Dropoff location</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="booking_id_2131">Reservation ID: </string>
    <string name="canceled_by_driver">Cancelled by driver</string>
    <string name="canceled_by_you">Cancelled by you</string>
    <string name="ride_history_detail">Travel History Details</string>
    <string name="generate_otp">Generating OTP</string>
    <string name="mobile_verification">Email verification</string>
    <string name="old_password">Old Password</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="how_it_works_text">We work with your satisfaction in mind</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="uryde_los_angeles">Uryde Los Angeles</string>
    <string name="next">Next</string>
</resources>