<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="@string/reset_password"
        android:textColor="#717171"
        android:textSize="@dimen/_14ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#dddddd" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="@string/help"
        android:textColor="#717171"
        android:textSize="@dimen/_14ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:visibility="gone"
        android:background="#dddddd" />

    <TextView
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="@string/support"
        android:textColor="#717171"
        android:textSize="@dimen/_14ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:visibility="gone"
        android:background="#dddddd" />

    <TextView
        android:id="@+id/terms_condition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="@string/terms_contions"
        android:textColor="#717171"
        android:textSize="@dimen/_14ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#dddddd" />

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        android:text="@string/privacy_policy"
        android:textColor="#717171"
        android:textSize="@dimen/_14ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#dddddd" />

</LinearLayout>