<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/otp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/mobile_verification"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/otp_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/we_just_sent_you_a_code_via_email_please_enter_it_below_to_choose_a_new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/_10sdp">

                <EditText
                    android:id="@+id/entered_otp"
                    android:layout_width="match_parent"
                    android:maxLength="6"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_code"
                    android:textSize="@dimen/_12ssp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/verify_otp"
                style="@style/ButtonStyle"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/verify" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/did_not_receive_the_otp_in_your_cell_phone_click_here_to_resubmit"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
