<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_how_it_works"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="@dimen/_5sdp"
        android:layout_above="@+id/text_2"
        android:text="@string/uryde_los_angeles"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_above="@+id/layoutDots"
        android:textColor="@color/black"
        android:padding="@dimen/_5sdp"
        android:text="@string/how_it_works_text"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_above="@+id/get_started"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="@dimen/_150sdp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/start"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/c_s_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_skip"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="#767676"
                android:textSize="@dimen/_14ssp" />

            <Button
                android:id="@+id/btn_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_back"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
